--- a/index.html
+++ b/index.html
@@ -1,275 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>For You</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        sans-serif;
-    }
-
-    body {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: radial-gradient(circle at top, #ffd6ec 0%, #ffb3d9 25%, #ff8fbf 50%, #ff6ba6 75%, #ff4b8b 100%);
-      color: #2d1437;
-    }
-
-    .card {
-      background: rgba(255, 255, 255, 0.95);
-      border-radius: 20px;
-      padding: 30px 24px 26px;
-      max-width: 380px;
-      width: 90%;
-      text-align: center;
-      box-shadow:
-        0 18px 50px rgba(0, 0, 0, 0.18),
-        0 0 0 1px rgba(255, 255, 255, 0.8);
-      position: relative;
-      overflow: hidden;
-    }
-
-    .card::before,
-    .card::after {
-      content: "";
-      position: absolute;
-      border-radius: 999px;
-      opacity: 0.12;
-      filter: blur(1px);
-    }
-
-    .card::before {
-      width: 220px;
-      height: 220px;
-      background: #ff80c8;
-      top: -120px;
-      right: -90px;
-    }
-
-    .card::after {
-      width: 180px;
-      height: 180px;
-      background: #ffb347;
-      bottom: -100px;
-      left: -70px;
-    }
-
-    .title {
-      font-size: 1.8rem;
-      font-weight: 700;
-      margin-bottom: 6px;
-      position: relative;
-      z-index: 1;
-    }
-
-    .subtitle {
-      font-size: 0.95rem;
-      opacity: 0.8;
-      margin-bottom: 24px;
-      position: relative;
-      z-index: 1;
-    }
-
-    .question {
-      font-size: 1.4rem;
-      font-weight: 600;
-      margin-bottom: 24px;
-      position: relative;
-      z-index: 1;
-    }
-
-    .buttons {
-      display: flex;
-      justify-content: center;
-      gap: 14px;
-      position: relative;
-      z-index: 2;
-      min-height: 48px;
-    }
-
-    button {
-      border: none;
-      border-radius: 999px;
-      padding: 10px 20px;
-      font-size: 0.95rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition:
-        transform 0.18s ease,
-        box-shadow 0.18s ease,
-        background 0.18s ease,
-        color 0.18s ease;
-      white-space: nowrap;
-    }
-
-    #yesBtn {
-      background: linear-gradient(135deg, #ff6ba6, #ff4b8b);
-      color: #fff;
-      box-shadow: 0 8px 18px rgba(255, 75, 139, 0.4);
-    }
-
-    #yesBtn:hover {
-      transform: translateY(-2px) scale(1.03);
-      box-shadow: 0 12px 22px rgba(255, 75, 139, 0.5);
-    }
-
-    #yesBtn:active {
-      transform: translateY(0) scale(0.98);
-      box-shadow: 0 5px 12px rgba(255, 75, 139, 0.45);
-    }
-
-    #noBtn {
-      background: #ffffff;
-      color: #ff4b8b;
-      border: 1px solid rgba(255, 75, 139, 0.4);
-      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.08);
-      position: relative;
-    }
-
-    #noBtn:hover {
-      transform: translateY(-2px);
-      background: #fff5fb;
-    }
-
-    #noBtn:active {
-      transform: translateY(0);
-    }
-
-    @keyframes teleport {
-      0% {
-        opacity: 1;
-        transform: translate(var(--from-x), var(--from-y)) scale(1);
-      }
-      40% {
-        opacity: 0;
-        transform: translate(var(--mid-x), var(--mid-y)) scale(0.7);
-      }
-      60% {
-        opacity: 0;
-        transform: translate(var(--mid-x), var(--mid-y)) scale(0.7);
-      }
-      100% {
-        opacity: 1;
-        transform: translate(var(--to-x), var(--to-y)) scale(1);
-      }
-    }
-
-    .teleporting {
-      animation: teleport 0.7s ease-in-out forwards;
-    }
-
-    @keyframes popIn {
-      0% {
-        transform: scale(0.7);
-        opacity: 0;
-      }
-      60% {
-        transform: scale(1.05);
-        opacity: 1;
-      }
-      100% {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-
-    .footer-note {
-      margin-top: 12px;
-      font-size: 0.75rem;
-      opacity: 0.7;
-      position: relative;
-      z-index: 1;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <div class="card">
-    <h1 class="title">Hey you 🥺</h1>
-    <p class="subtitle">I have a very, very important question...</p>
-    <p class="question">Will you be my girlfriend?</p>
-
-    <div class="buttons">
-      <button id="yesBtn">Yes 💕</button>
-      <button id="noBtn">No 😈</button>
-    </div>
-
-    <p class="footer-note">P.S. Our monthsary day is already destiny ✨</p>
-  </div>
-
-  <script>
-    const yesBtn = document.getElementById("yesBtn");
-    const noBtn = document.getElementById("noBtn");
-
-    yesBtn.addEventListener("click", () => {
-      const card = document.querySelector(".card");
-
-      card.innerHTML = `
-        <h1 class="title">Yessssssssssssssssss! 💖</h1>
-        <p class="question" style="margin-top: 10px;">
-          Our monthsary day is <strong>26</strong> — it's official now!
-        </p>
-        <p class="subtitle" style="margin-top: 18px;">
-          You made me the happiest person today. Screenshot this, this is our contract. 🥺✨
-        </p>
-      `;
-
-      card.style.animation = "popIn 0.6s ease-out";
-    });
-
-    function teleportNoButton() {
-      const btn = noBtn;
-      const card = document.querySelector(".card");
-      const buttonsContainer = document.querySelector(".buttons");
-
-      const containerRect = card.getBoundingClientRect();
-      const btnRect = btn.getBoundingClientRect();
-      const groupRect = buttonsContainer.getBoundingClientRect();
-
-      const maxX = containerRect.width / 2 - btnRect.width / 2 - 10;
-      const minX = -maxX;
-      const maxY = 40;
-      const minY = -40;
-
-      const randomX = Math.random() * (maxX - minX) + minX;
-      const randomY = Math.random() * (maxY - minY) + minY;
-
-      const currentTransform = getComputedStyle(btn).transform;
-      let fromX = 0, fromY = 0;
-
-      if (currentTransform !== "none") {
-        const values = currentTransform.split("(")[1].split(")")[0].split(",");
-        if (values.length >= 6) {
-          fromX = parseFloat(values[4]);
-          fromY = parseFloat(values[5]);
-        }
-      }
-
-      const toX = randomX;
-      const toY = randomY;
-
-      const midX = (fromX + toX) / 2 + (Math.random() > 0.5 ? 30 : -30);
-      const midY = (fromY + toY) / 2 + (Math.random() > 0.5 ? 20 : -20);
-
-      btn.style.setProperty("--from-x", fromX + "px");
-      btn.style.setProperty("--from-y", fromY + "px");
-      btn.style.setProperty("--mid-x", midX + "px");
-      btn.style.setProperty("--mid-y", midY + "px");
-      btn.style.setProperty("--to-x", toX + "px");
-      btn.style.setProperty("--to-y", toY + "px");
-
-      btn.classList.remove("teleporting");
-      void btn.offsetWidth;
-      btn.classList.add("teleporting");
-    }
-
-    noBtn.addEventListener("click", teleportNoButton);
-  </script>
+    
 </body>
 </html>
