--- a/proposal.html
+++ b/proposal.html
@@ -216,8 +216,9 @@
           Our monthsary day is <strong>26</strong> — it's official now!
         </p>
         <p class="subtitle" style="margin-top: 18px;">
-          You made me the happiest person today. Screenshot this, this is our contract. 🥺✨
+          You made me the happiest person today. Iloveyou Ela 🥺✨
         </p>
+        <pDahil jan you owe me a kiss HWEHWHHEHWHEWH</p>
       `;
 
       card.style.animation = "popIn 0.6s ease-out";
