--- a/proposal.html
+++ b/proposal.html
@@ -218,7 +218,7 @@
         <p class="subtitle" style="margin-top: 18px;">
           You made me the happiest person today. Iloveyou Ela 🥺✨
         </p>
-        <pDahil jan you owe me a kiss HWEHWHHEHWHEWH</p>
+        <p>Dahil jan you owe me a kiss HWEHWHHEHWHEWH</p>
       `;
 
       card.style.animation = "popIn 0.6s ease-out";
