--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
   </div>
 
   <div class="card">
-    <h1 class="title">Hey you</h1>
-    <p class="subtitle">I have a very, very important question...</p>
+    <h1 class="title">Hi Ela</h1>
+    <p class="subtitle">uhmm ano hehe</p>
     <p class="question">Will you be my girlfriend?</p>
 
     <div class="buttons">
@@ -440,7 +440,6 @@
       <button id="noBtn">No</button>
     </div>
 
-    <p class="footer-note">P.S. Our monthsary day is already destiny ✨</p>
   </div>
 
   <script>
